--- a/configuration.yml
+++ b/configuration.yml
@@ -1,6 +1,6 @@
 #Account info write the username of all your account
 account_username:
-  - "Samuel79562829"
+  - "samuelFawo74775"
 #Account info write the password of all your account
 account_password:
   - "desney28"
